Opened 12 years ago
Closed 12 years ago
#3536 closed defect (fixed)
Compilation failure with --disable-decoder=vp7 or --disable-decoder=vp8
| Reported by: | jamal | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | build system |
| Version: | git-master | Keywords: | vp8 vp7 |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
$ ./configure --disable-decoder=vp7
[...]
$ make libavcodec/vp8.o
CC libavcodec/vp8.o
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c: In function 'vp7_decode_frame_header':
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:580:5: error: implicit declaration of function 'vp7_get_quants' [-Werror=implicit-function-declaration]
vp7_get_quants(s);
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c: In function 'vp78_decode_init':
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:2726:38: error: 'vp7_decode_mb_row_no_filter' undeclared (first use in this function)
s->decode_mb_row_no_filter = vp7_decode_mb_row_no_filter;
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:2726:38: note: each undeclared identifier is reported only once for each function it appears in
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:2727:38: error: 'vp7_filter_mb_row' undeclared (first use in this function)
s->filter_mb_row = vp7_filter_mb_row;
^
cc1.exe: some warnings being treated as errors
make: *** [libavcodec/vp8.o] Error 1
$ ./configure --disable-decoder=vp8
[...]
$ make libavcodec/vp8.o
CC libavcodec/vp8.o
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c: In function 'vp8_decode_frame_header':
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:705:9: error: implicit declaration of function 'parse_segment_info' [-Werror=implicit-function-declaration]
parse_segment_info(s);
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:715:13: error: implicit declaration of function 'update_lf_deltas' [-Werror=implicit-function-declaration]
update_lf_deltas(s);
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:717:5: error: implicit declaration of function 'setup_partitions' [-Werror=implicit-function-declaration]
if (setup_partitions(s, buf, buf_size)) {
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:728:5: error: implicit declaration of function 'vp8_get_quants' [-Werror=implicit-function-declaration]
vp8_get_quants(s);
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:731:9: error: implicit declaration of function 'update_refs' [-Werror=implicit-function-declaration]
update_refs(s);
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c: In function 'vp78_decode_init':
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:2727:38: error: 'vp8_decode_mb_row_no_filter' undeclared (first use in this function)
s->decode_mb_row_no_filter = vp8_decode_mb_row_no_filter;
^
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:2727:38: note: each undeclared identifier is reported only once for each function it appears in
D:/MinGW/msys/1.0/ffmpeg/src/libavcodec/vp8.c:2728:38: error: 'vp8_filter_mb_row' undeclared (first use in this function)
s->filter_mb_row = vp8_filter_mb_row;
^
cc1.exe: some warnings being treated as errors
make: *** [libavcodec/vp8.o] Error 1
Also http://fate.ffmpeg.org/report.cgi?time=20140407034140&slot=x86_64-archlinux-gcc-random
Disabling both or enabling both of course works fine.
Change History (1)
comment:1 by , 12 years ago
| Priority: | important → normal |
|---|---|
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in 836b60ce