Fix standalone compilation of vp7 and vp8 decoder.

Fixes ticket #3536.